gen_tcp_connection.erl added to target files

--- a/src/Makefile
+++ b/src/Makefile
@@ -19,6 +19,9 @@ EDOC_MODULES = \
 	operation \
 	sm \
 	gen_connection \
+	gen_tcp_connection \
+#	echo_server \
+#	echo_client \
 	gen_esme_session \
 	gen_esme \
 	gen_mc_session
