I think I'll remove gen_connection.

--- a/doc/examples/Makefile
+++ b/doc/examples/Makefile
@@ -14,7 +14,8 @@ EDOC_OPTS = [{dir, "$(DOCDIR)"}]
 # ----------------------------------------------------
 # Target Specs
 # ----------------------------------------------------
-EDOC_MODULES = echo_esme code_lock_esme submit_esme test_esme test_smsc
+EDOC_MODULES = echo_esme test_smsc
+#code_lock_esme submit_esme test_esme test_smsc
 
 MODULES = $(EDOC_MODULES)
 
